# SDL-3D-Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: 3D-Software-Renderer-Project-Plan.md
include/: array.h  camera.h  clipping.h  display.h  light.h  matrix.h  mesh.h  swap.h  texture.h  triangle.h  vector.h
src/: array.c  camera.c  clipping.c  display.c  light.c  main.c  matrix.c  mesh.c  swap.c  texture.c  vector.c
tests/: CMakeLists.txt  test_vector.c
